crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__dir_parse_error.snap
---
source: crates/compiler/tests/parser_test/dir.rs
assertion_line: 95
expression: "<p v-=\"tt\"/>"
---
Attr:
  name: v-
  value:
    content: tt
    location:
      start: "Pos: 6, Ln: 1, Col: 7"
      end: "Pos: 10, Ln: 1, Col: 11"
  name_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 5, Ln: 1, Col: 6"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 10, Ln: 1, Col: 11"

