crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__on_dir.snap
---
source: crates/compiler/tests/parser_test/dir.rs
assertion_line: 67
expression: "<p @=\"tt\"/>"
---
Dir:
  name: "on"
  argument: ~
  modifiers: []
  expression:
    content: tt
    location:
      start: "Pos: 5, Ln: 1, Col: 6"
      end: "Pos: 9, Ln: 1, Col: 10"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 4, Ln: 1, Col: 5"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 9, Ln: 1, Col: 10"

