crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__prop_dir-2.snap
---
source: crates/compiler/tests/parser_test/dir.rs
expression: "<p .^-^.attr=\"tt\" />"

---
Dir:
  name: bind
  argument:
    Static: ^-^
  modifiers:
    - attr
    - prop
  expression:
    content: tt
    location:
      start: "Pos: 13, Ln: 1, Col: 14"
      end: "Pos: 18, Ln: 1, Col: 19"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 12, Ln: 1, Col: 13"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 18, Ln: 1, Col: 19"

