crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__prop_dir-3.snap
---
source: crates/compiler/tests/parser_test/dir.rs
expression: "<p .[dynamic]=\"tt\" />"

---
Dir:
  name: bind
  argument:
    Dynamic: dynamic
  modifiers:
    - prop
  expression:
    content: tt
    location:
      start: "Pos: 14, Ln: 1, Col: 15"
      end: "Pos: 19, Ln: 1, Col: 20"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 13, Ln: 1, Col: 14"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 19, Ln: 1, Col: 20"

