crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir__prop_dir-4.snap
---
source: crates/compiler/tests/parser_test/dir.rs
assertion_line: 53
expression: "<p v-t.[dynamic]=\"tt\" />"
---
Dir:
  name: t
  argument: ~
  modifiers:
    - "[dynamic]"
  expression:
    content: tt
    location:
      start: "Pos: 17, Ln: 1, Col: 18"
      end: "Pos: 22, Ln: 1, Col: 23"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 16, Ln: 1, Col: 17"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 22, Ln: 1, Col: 23"

